--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 contourpy==1.2.0
 cycler==0.12.1
 Cython==3.0.9
+et-xmlfile==1.1.0
 fonttools==4.50.0
 ifcopenshell==0.7.0.231218
 kiwisolver==1.4.5
@@ -10,6 +11,7 @@ matplotlib==3.8.3
 networkx==3.2.1
 numba==0.59.1
 numpy==1.26.4
+openpyxl==3.1.2
 packaging==24.0
 pandas==2.2.1
 pillow==10.2.0
